--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ text-decoration: underline;
 	    <div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
 		    <header class="resume-header pt-4 pt-md-0">
 			    <div class="media flex-column flex-md-row">
-<a href="https://ibb.co/dgGKMwq"><img src="https://i.ibb.co/bJzdmMZ/1-magicstudio-b5rml9v8ttp.png" alt="image" border="0"width="220" height="220"></a>
+<a href="./photo.png"><img src="./photo.png" alt="image" border="0"width="220" height="220"></a>
 				    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/фотощька.jpg" alt="">
 				    <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 					    <div class="primary-info">
@@ -48,8 +48,8 @@ text-decoration: underline;
 					    </div>
 					    <div class="secondary-info ml-md-auto mt-2">
 						    <ul class="resume-social list-unstyled">
-				                <li class="mb-3"><a href="https://t.me/staryi_ezh"><span class="fa-container text-center mr-2"><i class="fab fa-telegram-plane fa-fw"></i></span>staryi_ezh</a></li>
-				                <li class="mb-3"><a href="https://vk.com/staryi_ezh"><span class="fa-container text-center mr-2"><i class="fab fa-vk fa-fw"></i></span>staryi_ezh</a></li>
+				                <li class="mb-3"><a href="https://t.me/okafopu"><span class="fa-container text-center mr-2"><i class="fab fa-telegram-plane fa-fw"></i></span>okafopu</a></li>
+				                <!--<li class="mb-3"><a href="https://vk.com/staryi_ezh"><span class="fa-container text-center mr-2"><i class="fab fa-vk fa-fw"></i></span>staryi_ezh</a></li>-->
 						    </ul>
 					    </div>
 				    </div>
