--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ text-decoration: underline;
 					    <div class="primary-info">
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Андрей Золотухин</h1>
 						    <ul class="list-unstyled">
-							    <li class="mb-2"><a href="mailto:andrey.yasenev5@yandex.ru"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>andrey.yasenev5@yandex.ru</a></li>
+							    <li class="mb-2"><a href="mailto:okafopu@yandex.ru"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>okafopu@yandex.ru</a></li>
 							    <li><a><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>+7 918 244 12 40</a></li>
 						    </ul>
 					    </div>
@@ -109,7 +109,7 @@ text-decoration: underline;
 										    <p>Учил детей 10 - 14 лет электронике и схемотехнике</p>
 									    </div>
 								    </article>
-								    <article class="resume-timeline-item position-relative">
+								    <article class="resume-timeline-item position-relative pb-5">
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
 										        <h3 class="resume-position-title font-weight-bold mb-1">И ещё раз разработчик электроники</h3>
@@ -120,6 +120,18 @@ text-decoration: underline;
 										    <p>В частном порядке выполнял заказы по разработке электронных устройств: с нуля до предсерийного прототипа</p>
 									    </div>
 								    </article>
+									<article class="resume-timeline-item position-relative">
+										<div class="resume-timeline-item-header mb-2">
+											<div class="d-flex flex-column flex-md-row">
+												<h3 class="resume-position-title font-weight-bold mb-1">Электронщик</h3>
+												<div class="resume-company-name ml-auto">ООО «К-М»</div>
+											</div>
+											<div class="resume-position-time">Февраль 2024 — Сейчас</div>
+										</div>
+										<div class="resume-timeline-item-desc">
+											<p>Разрабатываю и дорабатываю электронику для установок неразрушающего контроля покрытий</p>
+										</div>
+									</article>
 							    </div>
                   </body>
 
@@ -141,19 +153,19 @@ text-decoration: underline;
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Схемотехника</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Проектирование печатных плат</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 73%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Пайка</div>
+								            <div class="resume-skill-name">Пайка (SMT, THT)</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 79%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 88%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 
@@ -172,19 +184,19 @@ text-decoration: underline;
 								        <li class="mb-2">
 								            <div class="resume-skill-name">C++ (микроконтроллеры)</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 72%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 48%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Python</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 76%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 56%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
 								            <div class="resume-skill-name">HTML/CSS</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 55%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 35%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 							        </ul>
@@ -235,7 +247,7 @@ text-decoration: underline;
     </article>
 
 <footer class="footer">
-    <ul class="footer-author">Andrey Yasenev x Kris <br>2023</ul>
+    <ul class="footer-author">Andrey Yasenev x Kris <br>2024</ul>
 </footer>
 
 </body>
