--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ text-decoration: underline;
     </article>
 
 <footer class="footer">
-    <ul class="footer-author">Andrey Yasenev x Kris <br>2024</ul>
+    <ul class="footer-author">Okafopu x Kris <br>2024</ul>
 </footer>
 
 </body>
